Modified RegistrationManager to have more restriction on username and password